--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,7 +25,7 @@ jobs:
         # Repository upload token - get it from codecov.io. Required only for private repositories
         # token: # optional
         # Path to coverage file to upload
-        file: ./coverage.xml
+        # file: ./coverage.xml
         # Flag upload to group coverage metrics (e.g. unittests | integration | ui,chrome)
         #f lags: # optional
         # Specify whether or not CI build should fail if Codecov runs into an error during upload
