--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -11,7 +11,7 @@ jobs:
   
     steps:
       - uses: actions/checkout@v1
-      name: grcov
+      - name: grcov
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
